# ArmnnBackendFramework

./: CMakeLists.txt  CustomBackend.cpp  CustomBackend.hpp  CustomBackendUtils.cpp  CustomBackendUtils.hpp  CustomLayerBridge.cpp  CustomLayerBridge.hpp  CustomLayerSupport.cpp  CustomLayerSupport.hpp  CustomPreCompiledObject.cpp  CustomPreCompiledObject.hpp  CustomRegistryInitializer.cpp  CustomSubgraphViewConverter.cpp  CustomSubgraphViewConverter.hpp  CustomSubgraphViewOptimizer.cpp  CustomSubgraphViewOptimizer.hpp  CustomWorkloadFactory.cpp  CustomWorkloadFactory.hpp  README.md  backend.cmake  backend.mk
layers/: CMakeLists.txt  CustomConv2DLayer.cpp  CustomDepthwiseConv2DLayer.cpp  CustomInputLayer.cpp  CustomPooling2DLayer .cpp  CustomReshapeLayer.cpp  CustomSoftmaxLayer.cpp
test/: CMakeLists.txt  CustomCreateWorkloadTests.cpp  CustomEndToEndTests.cpp
workloads/: CMakeLists.txt  CustomAdditionWorkload.cpp  CustomAdditionWorkload.hpp  CustomPreCompiledWorkload.cpp  CustomPreCompiledWorkload.hpp
